--- a/src/styles.css
+++ b/src/styles.css
@@ -71,7 +71,7 @@ button {
 #pop-up {
     top : -400px;
     transform-origin:10px 10px;
-    animation: drop 0.5s ease forwards,
+    animation: drop 0.5s 1s ease forwards,
                 swing 2s 3s ease forwards;
 }
 
